[gd_scene load_steps=25 format=2]

[ext_resource path="res://scene/hub.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/player.gd" type="Script" id=2]
[ext_resource path="res://texture/characters.png" type="Texture" id=3]
[ext_resource path="res://font/default.tres" type="DynamicFont" id=4]
[ext_resource path="res://script/game.gd" type="Script" id=5]
[ext_resource path="res://audio/sfx/water-cave__klangkobold__443061.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/music/531506__andrewkn__ambient-meditation-in-eternity.mp3" type="AudioStream" id=7]
[ext_resource path="res://theme.tres" type="Theme" id=8]
[ext_resource path="res://scene/main_menu.gd" type="Script" id=9]
[ext_resource path="res://scene/options_menu.gd" type="Script" id=10]
[ext_resource path="res://scene/credits_menu.gd" type="Script" id=11]
[ext_resource path="res://font/title.tres" type="DynamicFont" id=12]
[ext_resource path="res://texture/arrow.png" type="Texture" id=13]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.333
height = 0.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ), SubResource( 10 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 8, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 8, 8, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 24, 8, 8, 8 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 8 ), SubResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
} ]

[node name="root" type="Node2D"]
script = ExtResource( 5 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "music"

[node name="ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true
bus = "ambience"

[node name="hub" parent="." instance=ExtResource( 1 )]

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 112, 64 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Arrow" type="Sprite" parent="."]
position = Vector2( 9, 122 )
texture = ExtResource( 13 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 8, 108 )
scale = Vector2( -1, 1 )
z_index = 1
script = ExtResource( 2 )

[node name="shape" type="CollisionShape2D" parent="player"]
position = Vector2( 0, 0.679 )
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="player"]
frames = SubResource( 4 )
animation = "idle"
offset = Vector2( 1, 0 )

[node name="eyes" type="AnimatedSprite" parent="player"]
light_mask = 2
frames = SubResource( 9 )
animation = "idle"
offset = Vector2( 1, 0 )

[node name="light" type="Light2D" parent="."]
visible = false
position = Vector2( 256, 64 )
scale = Vector2( 1, -1 )
mode = 3

[node name="light_mask_viewport" type="Viewport" parent="."]
size = Vector2( 512, 128 )
disable_3d = true
usage = 1
render_target_update_mode = 3

[node name="gui" type="CanvasLayer" parent="."]

[node name="title" type="MarginContainer" parent="gui"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 16.0

[node name="VBoxContainer" type="VBoxContainer" parent="gui/title"]
margin_right = 896.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="gui/title/VBoxContainer"]
modulate = Color( 0.988235, 0.811765, 0.392157, 1 )
margin_right = 896.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 12 )
text = "Little Light Hoarder"
align = 1

[node name="author" type="Label" parent="gui/title/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 28.0
margin_right = 896.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 4 )
text = "           by Theo Ratkin"
align = 1

[node name="count" type="MarginContainer" parent="gui"]
visible = false
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 16.0

[node name="text" type="Label" parent="gui/count"]
modulate = Color( 1, 0.92549, 0.521569, 1 )
margin_right = 896.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 4 )
text = "0/48"
align = 1

[node name="options" type="CenterContainer" parent="gui"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -52.0
margin_right = 112.0
margin_bottom = 52.0
script = ExtResource( 10 )

[node name="container" type="VBoxContainer" parent="gui/options"]
margin_right = 224.0
margin_bottom = 119.0
custom_constants/separation = 10

[node name="music" type="Button" parent="gui/options/container"]
margin_top = 26.0
margin_right = 224.0
margin_bottom = 42.0
focus_neighbour_top = NodePath("../back")
theme = ExtResource( 8 )
text = "Music     100%"

[node name="ambience" type="Button" parent="gui/options/container"]
margin_right = 224.0
margin_bottom = 16.0
theme = ExtResource( 8 )
text = "Ambience  100%"

[node name="sounds" type="Button" parent="gui/options/container"]
margin_top = 52.0
margin_right = 224.0
margin_bottom = 68.0
theme = ExtResource( 8 )
text = "Sounds    100%"

[node name="separator" type="HSeparator" parent="gui/options/container"]
margin_left = -304.0
margin_top = 112.5
margin_right = 528.0
margin_bottom = 127.5
theme = ExtResource( 8 )
custom_constants/separation = 15

[node name="back" type="Button" parent="gui/options/container"]
margin_top = 88.0
margin_right = 224.0
margin_bottom = 104.0
focus_neighbour_bottom = NodePath("../music")
theme = ExtResource( 8 )
text = "Back"

[node name="menu" type="CenterContainer" parent="gui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -47.0
margin_right = 56.0
margin_bottom = 47.0
script = ExtResource( 9 )

[node name="container" type="VBoxContainer" parent="gui/menu"]
margin_right = 112.0
margin_bottom = 94.0
custom_constants/separation = 10

[node name="play" type="Button" parent="gui/menu/container"]
margin_right = 112.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../exit")
theme = ExtResource( 8 )
text = "PLAY"

[node name="reset" type="Button" parent="gui/menu/container"]
visible = false
margin_top = 26.0
margin_right = 112.0
margin_bottom = 42.0
theme = ExtResource( 8 )
text = "RESTART"

[node name="options" type="Button" parent="gui/menu/container"]
margin_top = 26.0
margin_right = 112.0
margin_bottom = 42.0
theme = ExtResource( 8 )
text = "OPTIONS"

[node name="credits" type="Button" parent="gui/menu/container"]
margin_top = 52.0
margin_right = 112.0
margin_bottom = 68.0
theme = ExtResource( 8 )
text = "CREDITS"

[node name="exit" type="Button" parent="gui/menu/container"]
margin_top = 78.0
margin_right = 112.0
margin_bottom = 94.0
focus_neighbour_bottom = NodePath("../play")
theme = ExtResource( 8 )
text = "EXIT"

[node name="credits" type="CenterContainer" parent="gui"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -35.5
margin_bottom = 35.5
script = ExtResource( 11 )

[node name="container" type="VBoxContainer" parent="gui/credits"]
margin_left = 32.0
margin_right = 864.0
margin_bottom = 150.0

[node name="text" type="Label" parent="gui/credits/container"]
margin_right = 832.0
margin_bottom = 73.0
theme = ExtResource( 8 )
text = "Tileset \"Cavernas\" by Adam Saltsman
Song \"Meditation - In Eternity\" by Andrewkn
Cave sound \"Water Cave\" by Klangkobold
Collection sound \"Mein bottle pling\" by skylarjulian

Developed by Theo Ratkin"
align = 1

[node name="separator" type="HSeparator" parent="gui/credits/container"]
margin_top = 77.0
margin_right = 832.0
margin_bottom = 92.0
theme = ExtResource( 8 )
custom_constants/separation = 15

[node name="back" type="Button" parent="gui/credits/container"]
margin_top = 96.0
margin_right = 832.0
margin_bottom = 112.0
theme = ExtResource( 8 )
text = "Back"

[connection signal="pressed" from="gui/options/container/music" to="gui/options" method="_on_music_pressed"]
[connection signal="pressed" from="gui/options/container/ambience" to="gui/options" method="_on_ambience_pressed"]
[connection signal="pressed" from="gui/options/container/sounds" to="gui/options" method="_on_sounds_pressed"]
[connection signal="pressed" from="gui/options/container/back" to="gui/options" method="_on_back_pressed"]
[connection signal="pressed" from="gui/menu/container/play" to="gui/menu" method="_on_play_pressed"]
[connection signal="pressed" from="gui/menu/container/reset" to="gui/menu" method="_on_reset_pressed"]
[connection signal="pressed" from="gui/menu/container/options" to="gui/menu" method="_on_options_pressed"]
[connection signal="pressed" from="gui/menu/container/credits" to="gui/menu" method="_on_credits_pressed"]
[connection signal="pressed" from="gui/menu/container/exit" to="gui/menu" method="_on_exit_pressed"]
[connection signal="pressed" from="gui/credits/container/back" to="gui/credits" method="_on_back_pressed"]
